// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabsRow /> should hide monitoring and add-ons tabs if needed (eg. when we archive a cluster) 1`] = `
<Component
  activeKey={0}
  onSelect={[Function]}
>
  <Tab
    eventKey={0}
    key="0"
    tabContentId="overviewTabContent"
    title="Overview"
  />
</Component>
`;

exports[`<TabsRow /> should render 1`] = `
<Component
  activeKey={0}
  onSelect={[Function]}
>
  <Tab
    eventKey={0}
    key="0"
    tabContentId="overviewTabContent"
    title="Overview"
  />
  <Tab
    eventKey={1}
    key="1"
    tabContentId="monitoringTabContent"
    title="Monitoring"
  />
</Component>
`;
